plugins {
    id 'java'
    id 'jacoco'
    id 'signing'
    id 'maven-publish'
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
    id 'checkstyle'
    id 'pmd'
}

group = 'io.github.brantunger'
version = '1.0.15'

base {
    archivesName = 'unruly-engine'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

checkstyle {
    toolVersion = '10.20.1'
    ignoreFailures = false
    maxWarnings = 0
}

pmd {
    toolVersion = '7.5.0'
    ignoreFailures = false
    sourceSets = [sourceSets.main]
    ruleSets = []
    ruleSetConfig = resources.text.fromString('''<?xml version="1.0"?>
<ruleset name="Unruly PMD Ruleset"
    xmlns="http://pmd.sourceforge.net/ruleset/2.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://pmd.sourceforge.net/ruleset/2.0.0 https://pmd.sourceforge.io/ruleset_2_0_0.xsd">
    <description>Unruly PMD Ruleset</description>
    <rule ref="category/java/bestpractices.xml">
        <exclude name="GuardLogStatement"/>
    </rule>
    <rule ref="category/java/errorprone.xml"/>
</ruleset>''')
}

tasks.register('javadocJar', Jar) {
    archiveClassifier = 'javadoc'
    from javadoc
}

tasks.register('sourcesJar', Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from(components['java'])
            artifact sourcesJar
            artifact javadocJar

            pom {
                name.set('unruly-engine')
                description.set('Unruly is a pure Java rule engine that parses and evaluates using MVEL based rules')
                url.set('https://github.com/brantunger/unruly-engine')
                licenses {
                    license {
                        name.set('GNU GENERAL PUBLIC LICENSE v3.0')
                        url.set('https://www.gnu.org/licenses/gpl-3.0.en.html')
                    }
                }
                developers {
                    developer {
                        id.set('brantunger')
                        name.set('Brant Unger')
                        email.set('brantunger@gmail.com')
                    }
                }
                scm {
                    connection.set('scm:git:git://github.com/brantunger/unruly-engine.git')
                    developerConnection.set('scm:git:ssh://github.com/brantunger/unruly-engine.git')
                    url.set('https://github.com/brantunger/unruly-engine')
                }
            }
        }
    }
}

nexusPublishing {
    repositories {
        sonatype {
            nexusUrl.set(uri('https://s01.oss.sonatype.org/service/local/'))
            snapshotRepositoryUrl.set(uri('https://s01.oss.sonatype.org/content/repositories/snapshots/'))
            username.set(System.getenv('MAVEN_USERNAME'))
            password.set(System.getenv('MAVEN_PASSWORD'))
        }
    }
}

signing {
    def key = System.getenv('GPG_KEY')
    def pass = System.getenv('GPG_PASSWORD')
    useInMemoryPgpKeys(key, pass)
    sign publishing.publications.mavenJava
}

dependencies {
    implementation 'org.mvel:mvel2:2.5.2.Final'
    implementation 'org.slf4j:slf4j-api:2.0.18'

    compileOnly 'org.projectlombok:lombok:1.18.46'

    annotationProcessor 'org.projectlombok:lombok:1.18.46'

    testImplementation platform('org.junit:junit-bom:6.1.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.18'
}

test {
    useJUnitPlatform {
        includeEngines 'junit-jupiter'
    }
    systemProperties = [
            'junit.jupiter.extensions.autodetection.enabled': 'true',
    ]
    jacoco {
        destinationFile = layout.buildDirectory.file('jacoco/test.exec').get().asFile
    }
}

jacocoTestReport {
    reports {
        html.required = true
        xml.required = true
        xml.outputLocation = layout.buildDirectory.file('reports/jacoco/report.xml')
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 1.00
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification
